-
Bug
-
Resolution: Done
-
P1: Critical
-
5.7.0, 5.8.0
-
None
Here's a code that shows a side-by-side comparison on how it stops rendering it eventually.
A screenshot with the behavior I get.
import QtQuick 2.1 import QtQuick.Layouts 1.1 import QtQuick.Controls 1.1 ApplicationWindow { function longText() { var ret = "<ul>" for(var i=0; i<1234; ++i) ret += "<li>hola "+i+"</li>" return ret + "</ul>"; } id: window ScrollView { anchors.fill: parent RowLayout { Label { text: longText() } Text { text: longText() } } } }
- is duplicated by
-
QTBUG-51027 When a Text item has over 16000 characters in a single line then when NativeRendering is used it will stop displaying characters
-
- Closed
-